2001-04-12  Wolfgang Sourdeau  <wolfgang@contre.com>

	* src/callbcks.c (widget_close_cb): when leaving from the menu (or
	any widget) we should save the window status too and not rely on
	viewerclose_cb which should be triggered by a delete_event signal.

	* src/setup.c: keys named win_* should be named viewer_def_*
	instead. 

	* configure.in: minimal gnome-print version is 0.28

	* src/ps_print.c (get_printers): removed unused name[];
	(make_default_pr): choose a default printer following the value
	return by getenv ("PRINTER"), makes the first printer in the list
	(which is also the first in /etc/printcap) the default so that
	systems with BSD LPR will have a default printer anyway.
	(get_printers): defname is filled anyway with at least the first
	entry obtained from lpc

2001-04-11  Wolfgang Sourdeau  <wolfgang@contre.com>

	* src/ps_print.c (get_printers): fixed bug which might prevents
	more than one default printer on BSD LPR based systems

2001-04-10  Wolfgang Sourdeau  <wolfgang@contre.com>

	* src/fileopen.c (file_dialog): reflected previous change all
	along the file

	* src/setup.h (locale_setup): removed this declaration as locale
	setup is handled by app_setup

	* src/setup.c: now includes "setup.h"

	* src/setup.h (CAN_SAVE_CONFIG): new macro for platforms that
	have a native configuration system

	* src/setup.c (save_last_directory): fixed the Win32 function to
	save the name of the last directory to key "last_directory"
	instead of "viewer_def_x"

2001-04-07  Wolfgang Sourdeau  <wolfgang@contre.com>

	* src/ps_print.c (get_printers): attempt to make it work with
	"standard" (what's in a name) BSD LPR system.
	(make_printer_menu): default printer is put on top of the list.

	* src/print.h: moved definitions related to ps_print in that file.

2001-04-06  Wolfgang Sourdeau  <wolfgang@contre.com>

	* src/viewer.h (struct _ViewerData): removed file_name as it was
	not used;

	* src/setup.c (gnome_screen_setup): added ability to remind window