@@ -2,4 +2,4 @@ PACKAGE = @PACKAGE@
 VERSION = @VERSION@
 SUBDIRS = intl po src debian macros
 
-EXTRA_DIST = ghfaxviewer.spec Makefile.win32.in gfv_gtkrc
+EXTRA_DIST = README.cvs ghfaxviewer.spec Makefile.win32.in gfv_gtkrc
